Sforce8 Project Data/src/objects/MessageItem__c.object
<CustomObject>
    <description>連絡事項名：年月（yyyymm）</description>
    <fields>
        <fullName>Message1__c</fullName>
        <label>連絡事項１</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message2__c</fullName>
        <label>連絡事項２</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message3__c</fullName>
        <label>連絡事項３</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>連絡事項</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>連絡事項名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DuplicationNameChk</fullName>
        <active>true</active>
        <errorConditionFormula>VLOOKUP(
$ObjectType.MessageItem__c.Fields.Id,
$ObjectType.MessageItem__c.Fields.Name,
Name) &lt;&gt; Id</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>該当年月にすでに存在するため、重複登録できません</errorMessage>
    </validationRules>
</CustomObject>